src/parser/snapshots/expr/relational/greater_than.snap
---
source: src/parser/parser.rs
description: relational expressions
expression: actual.unwrap()
info: 10 > 5
---
location:
  line: 1
  column: 1
kind:
  binary:
    - greater_than
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "10"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "5"
          - decimal
