src/parser/snapshots/expr/relational/less_equal.snap
---
source: src/parser/parser.rs
description: relational expressions
expression: actual.unwrap()
info: 2 <= 3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - less_than_or_equal
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "2"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "3"
          - decimal
